fix centering issue on safari read clue

--- a/assets/css/trebek/reading_clue.scss
+++ b/assets/css/trebek/reading_clue.scss
@@ -1,13 +1,12 @@
 .trebek.reading_clue {
     .content {
-        display: flex;
-        flex-direction: column;
+        display: grid;
+        grid-template-rows: 1fr auto;
         position: relative;
         overflow: hidden;
         background: aliceblue;
 
         .clue, .answer {
-            flex-grow: 1;
             background: blue;
             color: white;
             display: grid;
